# panini

./: .gitignore  CMakeLists.txt  README.md  appimage.sh
src/: About.cpp
